--- a/ConwyCastleSiege/pom.xml
+++ b/ConwyCastleSiege/pom.xml
@@ -4,11 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-<<<<<<< Updated upstream
-    <groupId>groupId</groupId>
-=======
-    <groupId></groupId>
->>>>>>> Stashed changes
+    <groupId>com.github.AdminHuntif</groupId>
     <artifactId>ConwyCastleSiege</artifactId>
     <version>1.0-SNAPSHOT</version>
 
