--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -2,8 +2,9 @@ name: ConwyCastleSiege
 main: me.huntifi.castlesiege.Main
 version: 1.1.0
 api-version: 1.13
-author: Huntifi
+authors: [Huntifi, Greenfoot5]
 depends: [Votifier]
+softdepend: [LibsDisguises, WorldEdit]
 commands:
   fly:
     description: Staff command that enables flying.
