--- a/ConwyCastleSiege/pom.xml
+++ b/ConwyCastleSiege/pom.xml
@@ -111,6 +111,12 @@
             <version>10.0.24</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sk89q.worldguard</groupId>
+            <artifactId>worldguard-bukkit</artifactId>
+            <version>7.0.7</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
