--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: me.huntifi.castlesiege.Main
 version: 1.1.0
 api-version: 1.13
 authors: [Huntifi, Greenfoot5]
-depends: [Votifier]
+depends: [Votifier, WorldGuard, NameTagEdit]
 softdepend: [LibsDisguises, WorldEdit]
 commands:
   fly:
