Flags now capture, missing animations and messages

--- a/ConwyCastleSiege/pom.xml
+++ b/ConwyCastleSiege/pom.xml
@@ -137,6 +137,11 @@
                             <shadedPattern>com.github.Huntif.ConwyCastleSiege</shadedPattern>
                         </relocation>
                     </relocations>
+                    <artifactSet>
+                        <includes>
+                            <include>dev.dejvokep:boosted-yaml-spigot</include>
+                        </includes>
+                    </artifactSet>
                 </configuration>
                 <executions>
                     <execution>
