WoolMaps should now work, and most new things should be commented

--- a/ConwyCastleSiege/src/main/resources/flags.yml
+++ b/ConwyCastleSiege/src/main/resources/flags.yml
@@ -32,6 +32,14 @@ HelmsDeep:
             x: 990
             y: 38
             z: 1141
+          - "==": Vector
+            x: 991
+            y: 38
+            z: 1141
+          - "==": Vector
+            x: 992
+            y: 38
+            z: 1141
         secondary_blocks:
           - "==": "Vector"
             x: 989
@@ -39,6 +47,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 37
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 37
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 37
             z: 1141
       1:
@@ -48,8 +64,16 @@ HelmsDeep:
             x: 989
             y: 39
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 39
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 39
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 39
             z: 1141
         secondary_blocks:
@@ -59,6 +83,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 38
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 38
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 38
             z: 1141
       2:
@@ -68,8 +100,16 @@ HelmsDeep:
             x: 989
             y: 40
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 40
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 40
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 40
             z: 1141
         secondary_blocks:
@@ -79,6 +119,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 39
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 39
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 39
             z: 1141
       3:
@@ -88,8 +136,16 @@ HelmsDeep:
             x: 989
             y: 41
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 41
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 41
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 41
             z: 1141
         secondary_blocks:
@@ -99,6 +155,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 40
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 40
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 40
             z: 1141
       4:
@@ -108,8 +172,16 @@ HelmsDeep:
             x: 989
             y: 42
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 42
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 42
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 42
             z: 1141
         secondary_blocks:
@@ -119,6 +191,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 41
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 41
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 41
             z: 1141
       5:
@@ -128,8 +208,16 @@ HelmsDeep:
             x: 989
             y: 43
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 43
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 43
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 43
             z: 1141
         secondary_blocks:
@@ -139,6 +227,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 42
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 42
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 42
             z: 1141
       6:
@@ -148,8 +244,16 @@ HelmsDeep:
             x: 989
             y: 44
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 44
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 44
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 44
             z: 1141
         secondary_blocks:
@@ -161,15 +265,30 @@ HelmsDeep:
             x: 990
             y: 43
             z: 1141
+          - "==": Vector
+            x: 991
+            y: 43
+            z: 1141
+          - "==": Vector
+            x: 992
+            y: 43
+            z: 1141
       7:
-        ==: me.huntifi.castlesiege.data_types.Frame
         primary_blocks:
           - "==": "Vector"
             x: 989
             y: 45
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 45
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 45
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 45
             z: 1141
         secondary_blocks:
@@ -179,6 +298,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 44
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 44
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 44
             z: 1141
       8:
@@ -188,8 +315,16 @@ HelmsDeep:
             x: 989
             y: 46
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 46
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 46
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 46
             z: 1141
         secondary_blocks:
@@ -199,6 +334,14 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 45
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 45
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 45
             z: 1141
       9:
@@ -208,8 +351,16 @@ HelmsDeep:
             x: 989
             y: 47
             z: 1141
-          - "==": "Vector"
+          - "==": Vector
             x: 990
+            y: 47
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 47
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 47
             z: 1141
         secondary_blocks:
@@ -219,5 +370,13 @@ HelmsDeep:
             z: 1141
           - "==": "Vector"
             x: 990
+            y: 46
+            z: 1141
+          - "==": Vector
+            x: 991
+            y: 46
+            z: 1141
+          - "==": Vector
+            x: 992
             y: 46
             z: 1141
