--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ConwyCastleSiege
 main: me.huntifi.castlesiege.Main
-version: 1.1.0
+version: 1.1.1
 api-version: 1.13
 authors: [Huntifi, Greenfoot5]
 depends: [Votifier, WorldGuard, NameTagEdit]
@@ -142,3 +142,8 @@ commands:
   Givevote:
     description: Moderator command to give players their votes.
     usage: /Givevote
+
+  # Kits
+  archer:
+    description: Selects the archer kit
+    usage: /archer
