--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -147,3 +147,6 @@ commands:
   archer:
     description: Selects the archer kit
     usage: /archer
+  swordsman:
+    description: Selects the swordsman kit
+    usage: /swordsman
