Did a shit ton of stuff, added Spearman and Swordsman fully, started on a Scoreboard, added timers, and even cleaned up the SQL stuff, I cannot wait to work on that so I can simplify it to two functions, and sort out the databases correctly

--- a/ConwyCastleSiege/src/main/resources/maps.yml
+++ b/ConwyCastleSiege/src/main/resources/maps.yml
@@ -4,6 +4,9 @@ HelmsDeep:
   # The relative time is analogous to hours * 1000
   start_time: 22000
   doDaylightCycle: false
+  duration:
+    minutes: 30
+    seconds: 0
   teams:
     Urukhai:
       name: "Uruk-hai"
