--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: me.huntifi.castlesiege.Main
 version: 1.1.1
 api-version: 1.13
 authors: [Huntifi, Greenfoot5]
-depends: [Votifier, WorldGuard, NameTagEdit]
+depends: [Votifier, WorldGuard, NametagEdit]
 softdepend: [LibsDisguises, WorldEdit]
 commands:
   fly:
@@ -142,6 +142,10 @@ commands:
   Givevote:
     description: Moderator command to give players their votes.
     usage: /Givevote
+
+  csreload:
+    description: Reloads the Castle Siege Plugin
+    usage: /csreload
 
   # Kits
   archer:
