Add engineer (without repair)

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -161,6 +161,9 @@ commands:
   crossbowman:
     description: Selects the crossbowman kit
     usage: /crossbowman
+  engineer:
+    description: Selects the engineer kit
+    usage: /engineer
   executioner:
     description: Selects the executioner kit
     usage: /executioner
