--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -3,9 +3,9 @@ main: me.huntifi.castlesiege.Main
 version: 1.1.1
 api-version: 1.13
 authors: [Huntifi, Greenfoot5]
-depends: [Votifier, WorldGuard, NametagEdit]
+depends: [Votifier, WorldGuard, NametagEdit, WorldGuard]
 softdepend: [LibsDisguises, WorldEdit]
-load: POSTWORLD
+load: STARTUP
 commands:
   fly:
     description: Staff command that enables flying.
